# ISIE

./: mainstat.c
CRUD_Election/: function.c  function.h  main.c  makefile
abir/: fileelection.txt  fonction.h  fonction_abir.c  main.c  makefile  prog
executable integrer/interfaces@@/interfaces10/interfaces/affichage/src/: Makefile  Makefile.am  Makefile.in  affichage  callbacks.c  callbacks.h  election.txt  function.c  function.h  interface.c.bak  interface.h  main.c  utilisateur.txt
executable integrer/interfaces@@/interfaces10/interfaces/affichage/src/.deps/: callbacks.Po  function.Po
eyaa/eyaUtilisateurfini(1)(1)/eyaUtilisateur/: Makefile
eyaa/eyaUtilisateurfini(1)(1)/eyaUtilisateur/autom4te.cache/: requests
eyaa/eyaUtilisateurfini(1)(1)/eyaUtilisateur/src/: Makefile  (+5 more)
eyaa/observateur/observateur/: Makefile  Makefile.in  troup
gestion utilisateur/: function.c  function.h  main.c
gladec8_12 (1)/eyaUtilisateurfini(1)(1)/eyaUtilisateur/: Makefile.am  Makefile.in  config.status  gestiontutilisateur.glade.bak  gestiontutilisateur.gladep.bak  troup
gladec8_12 (1)/observateur/observateur/: Makefile.am  config.status  gestiontobservateur.glade  gestiontobservateur.gladep.bak
gladec8_12 (1)/observateur/observateur/src/: CRUD.h  Makefile.am  interface.c  main.c  observateur.txt  tree.h
gladec8_12 (1)/observateur/observateur/src/.deps/: callbacks.Po
liste electorale/: gagnants.txt  liste.txt  mainliste.c  stat.h
liste electorale/liste electorale/: liste.c  liste.h  stat.c  stats.txt
obb/: function.c  function.h  main.c  obb.cbp  obb.depend  obb.layout
(+31 files in other folders)
